# rust_course_project_2

./: .env  .gitignore  Cargo.toml  Readme.md  diesel.toml  docker-compose.yml  prometheus.yml
chat-client/: Cargo.toml
chat-client/src/: commands.rs  main.rs  message_handler.rs  network.rs  ui.rs
chat-common/: Cargo.toml
chat-common/src/: async_message_stream.rs  error.rs  file_ops.rs  lib.rs  message.rs
chat-common/src/encryption/: file.rs  message.rs  mod.rs  service.rs
chat-server/: Cargo.toml  Dockerfile  diesel.toml
chat-server-frontend/: Cargo.toml  Dockerfile  index.html  nginx.conf
chat-server-frontend/src/: main.rs  routes.rs
chat-server-frontend/src/components/: mod.rs
chat-server-frontend/src/components/messages/: list.rs  mod.rs
chat-server-frontend/src/components/navigation/: mod.rs
chat-server-frontend/src/components/user/: create_form.rs  list.rs  mod.rs
chat-server-frontend/src/models/: message.rs  mod.rs  user.rs
chat-server-frontend/src/pages/: home.rs  login.rs  messages.rs  mod.rs  users.rs
chat-server-frontend/src/services/: message_service.rs  mod.rs  user_service.rs
chat-server/migrations/2025-03-06-140006_create_users/: up.sql
chat-server/migrations/2025-03-06-140019_create_messages/: up.sql
chat-server/migrations/2025-03-07-000002_add_test_users/: down.sql  up.sql
chat-server/src/: client_handler.rs  connection.rs  lib.rs  main.rs  message_handler.rs  models.rs  schema.rs  types.rs
chat-server/src/errors/: mod.rs
chat-server/src/models/: message.rs  user.rs
chat-server/src/repositories/: message.rs  user.rs
chat-server/src/routes/: authorization.rs  messages.rs  metrics.rs  mod.rs  users.rs
chat-server/src/services/: auth.rs  client_service.rs  connection_service.rs  mod.rs
chat-server/src/services/message/: broadcast.rs  handler.rs  mod.rs  processor.rs
chat-server/src/types/: mod.rs
chat-server/src/utils/: cors.rs  db_connection.rs  metrics.rs  mod.rs
chat-server/tests/: integration_tests.rs
