[package]
edition = "2021"
name = "chat-client"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
chat-common = {path = "../chat-common"}
chrono = "0.4"
clap = {version = "4.0", features = ["derive"]}
dotenvy = "0.15.7"
image = "0.24"
serde_cbor = "0.11"
serde_json = "1.0.140"
tempfile = "3.17.1"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3"
