[package]
edition = "2021"
name = "chat-common"
version = "0.1.0"
description = "Common library for chat client and server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
image = "0.24"
thiserror = "2.0.11"
tempfile = "3.17.1"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full", "net"] }
