[package]
description = "Common library for chat client and server"
edition = "2021"
name = "chat-common"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.0", features = ["derive"]}
image = "0.24"
serde = {version = "1.0", features = ["derive"]}
serde_cbor = "0.11"
tempfile = "3.17.1"
thiserror = "2.0.11"
tokio = {version = "1.0", features = ["full", "net"]}
