[package]
description = "Frontend for the chat server"
edition = "2021"
name = "chat-server-frontend"
version = "0.1.0"

[dependencies]
gloo-dialogs = "0.2.0"
gloo-net = "0.2"
gloo-storage = "0.2"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3", features = ["HtmlSelectElement", "HtmlInputElement", "HtmlTextAreaElement"]}
yew = {version = "0.21", features = ["csr"]}
yew-hooks = "0.3"
yew-router = "0.18"
