[package]
edition = "2021"
name = "chat-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
base64 = "0.21"
bcrypt = "0.17.0"
chat-common = {path = "../chat-common"}
chrono = {version = "0.4", features = ["serde"]}
diesel = {version = "2.1", features = ["chrono"]}
diesel-async = { version = "0.4", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
rand = "0.9.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full", "net"]}
tracing = "0.1.41"
tracing-subscriber = "0.3"

[lib]
name = "chat_server"
path = "src/lib.rs"

[[bin]]
name = "chat-server"
path = "src/main.rs"

[dev-dependencies]
chat-common = {path = "../chat-common"}
